--- a/index.html
+++ b/index.html
@@ -1,1 +1,17 @@
-<!-- Quack QUACK QUACK  -->
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="utf-8">
+    <title></title>
+  </head>
+  <body>
+    <p>
+    <section id="myTable"></section>
+
+
+    </p>
+    <script src= "js/app.js">
+
+    </script>
+  </body>
+</html>
