changes to all the things, css index was nuked from orbit and rebuilt on tears

--- a/index.html
+++ b/index.html
@@ -1,15 +1,17 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <link rel="stylesheet" href="css/style.css">
     <meta charset="utf-8">
     <title></title>
   </head>
   <body>
     <p>
-    <section id="myTable"></section>
 
-
+    <!-- <table id="tableData"></table>
+    <section id="data"></section> -->
     </p>
+
     <script src= "js/app.js">
 
     </script>
