added style (background)

--- a/index.html
+++ b/index.html
@@ -1,6 +1,11 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <style media="screen">
+    body {
+  background-image: url("/Users/evantatum/Downloads/background%20coffeeShop.png");
+}
+    </style>
     <link rel="stylesheet" href="css/style.css">
     <meta charset="utf-8">
     <title></title>
@@ -8,8 +13,8 @@
   <body>
     <p>
 
-    <!-- <table id="tableData"></table>
-    <section id="data"></section> -->
+    <table id="tableData"></table>
+    <section id="data"></section>
     </p>
 
     <script src= "js/app.js">
