Not much Css but working on a names.length and will need that inorder to make the // code work

--- a/index.html
+++ b/index.html
@@ -12,6 +12,28 @@
   </head>
   <body>
     <p>
+      <header class="mainHeader">
+
+        <nav><ul>
+            <li class="navitem" ><a href="#">Home</li>
+            <li class="navitem"><a href="#">About</li>
+            <li class="navitem"><a href="#">Hours/Location</li>
+        </ul></nav>
+      </header>
+
+      <div class="mainContent">
+        <div class="content">
+            <article class="topContent">
+              <header>
+                <h2><a href="#" title="first post"> First post</a><h2>
+              </header>
+            </article>
+      </div>
+
+
+
+
+
 
     <table id="tableData"></table>
     <section id="data"></section>
