--- a/data.html
+++ b/data.html
@@ -2,9 +2,17 @@
 <html>
   <head>
     <title></title>
-    <link rel="stylesheet" href="/css/style.css">
+    <style media="screen">
+    body {
+  background-image: url("/Users/evantatum/Downloads/background%20coffeeShop.png");
+}
+    </style>
+    <link rel="stylesheet" href="css/style.css">
+    <meta charset="utf-8">
   </head>
   <body>
+
+
     <form id="coffeeShop">
       <fieldset>
         <legend>New Coffee Shop</legend>
