added all img and little css

--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
         <nav><ul>
             <li class="navitem"><a href="#">Home</li>
             <li class="navitem"><a href="#">History</li>
+            <li class="navitem"><a href="#"> Camping/Stuff! </li>
             <li class="navitem"><a href="#">Hours/Location</li>
-            <li class="navitem"><a href="#">Camping Stuff!</li>
         </ul></nav>
       </header>
 
