--- a/data.html
+++ b/data.html
@@ -8,6 +8,8 @@
 }
     </style>
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/normalize.css">
+    <!-- <link rel="stylesheet" href="css/skeleton.css"> -->
     <meta charset="utf-8">
   </head>
   <body>
