added css still need to work on some app.js works and you can add more locations

--- a/data.html
+++ b/data.html
@@ -20,7 +20,7 @@
         <legend>New Coffee Shop</legend>
 
         <label for="name">Location: </label>
-        <input type="text" name="name">
+        <input type="text" name="locationName">
 
         <label for="customerMin">Minimum customers: </label>
         <input type="number" name="customerMin">
