i dont even know at this point i wanna go to bed

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
         <li>Address: 123 94th Ave, Seattle WA</li>
         <li>Hours: 6am-9pm daily (dont come here)</li>
       </ul></p>
-        <img src=" /Users/evantatum/201d5/week-2/campfire-coffee/img/campfire-family.jpg " />
+        <img src="img/campfire-family.jpg " />
       </div>
       <div class="three columns">
         <p>Capitol Hill</p>
@@ -66,7 +66,7 @@
         <li>Address: 123 1st Ave, Seattle WA</li>
         <li>Hours: 6am-9pm daily(or here)</li>
       </ul></p>
-        <img src="/Users/evantatum/201d5/week-2/campfire-coffee/img/campfire.jpg" />
+        <img src="img/campfire.jpg" />
       </div>
       <div class="three columns">
         <p>SeaTac</p>
@@ -75,7 +75,7 @@
         <li>Address: 123 1st Ave, Seattle WA</li>
         <li>Hours: 6am-9pm daily(or here)</li>
       </ul></p>
-        <img src="/Users/evantatum/201d5/week-2/campfire-coffee/img/campsite-tent-night.jpg" />
+        <img src="img/campsite-tent-night.jpg" />
       </div>
       <div class="three columns">
         <p>Web cite... what what</p>
@@ -84,7 +84,7 @@
         <li>Address: 432 77th Ave, Seattle WA</li>
         <li>Hours: 6am-9pm daily(Never come here)</li>
       </ul></p>
-        <img src="/Users/evantatum/201d5/week-2/campfire-coffee/img/project1.jpg" />
+        <img src="img/project1.jpg" />
       </div>
     </div>
       </div>
