plz dont destroy this

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-
+  
 
   <!-- Basic Page Needs
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
@@ -31,7 +31,18 @@
 
 </head>
 <body>
+  <nav>
+    <a href="Home">Home</a>
+    <a href="REI">Camping Goods</a> |
+    <a href="js">Dont go here</a> |
+    <a href="Nothing">Dont go here</a>
 
+  </nav>
+
+  <hgroup>
+           <h1 class="title_text">Campfire Coffee</h1>
+           <h3 class="title_text">From the tent to the fire, it's our coffee you require</h3>
+         </hgroup>
   <!-- Primary Page Layout
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <div class="container">
